find the contiguiousSubArrays from array