@@ -20,15 +20,14 @@ public class PolySuranceTestPartTwo {
         products.put("1003", 1099.99);
         products.put("1004", 64.99);
 
-        NewOrder orderSix = new NewOrder(6L, Arrays.asList("SALE10", "WINTERMADNESS"), Arrays.asList(new Item("1001", 2), new Item("1003", 2)));
-        NewOrder orderSeven = new NewOrder(7L, Arrays.asList("SALE30"), Arrays.asList(new Item("1001", 3), new Item("1002", 4)));
-        NewOrder orderEight = new NewOrder(8L, Arrays.asList(), Arrays.asList(new Item("1003", 1), new Item("1001", 7), new Item("1002", 2)));
-        NewOrder orderNine = new NewOrder(9L, Arrays.asList("WINTERMADNESS"), Arrays.asList(new Item("1001", 12), new Item("1003", 1)));
-        NewOrder orderTen = new NewOrder(10L, Arrays.asList("SALE20"), Arrays.asList(new Item("1003", 1)));
-        NewOrder orderEleven = new NewOrder(11L, Arrays.asList("SALE20", "WINTERMADNESS"), Arrays.asList(new Item("1004", 5)));
+        NewOrder orderSix = new NewOrder(6L, List.of("SALE10", "WINTERMADNESS"), List.of(new Item("1001", 2), new Item("1003", 2)));
+        NewOrder orderSeven = new NewOrder(7L, List.of("SALE30"), List.of(new Item("1001", 3), new Item("1002", 4)));
+        NewOrder orderEight = new NewOrder(8L, List.of(), List.of(new Item("1003", 1), new Item("1001", 7), new Item("1002", 2)));
+        NewOrder orderNine = new NewOrder(9L, List.of("WINTERMADNESS"), List.of(new Item("1001", 12), new Item("1003", 1)));
+        NewOrder orderTen = new NewOrder(10L, List.of("SALE20"), List.of(new Item("1003", 1)));
+        NewOrder orderEleven = new NewOrder(11L, List.of("SALE20", "WINTERMADNESS"), List.of(new Item("1004", 5)));
 
-        List<NewOrder> orderList = new ArrayList<>();
-        orderList.addAll(Arrays.asList(orderSix, orderSeven, orderEight, orderNine, orderTen, orderEleven));
+        List<NewOrder> orderList = new ArrayList<>(List.of(orderSix, orderSeven, orderEight, orderNine, orderTen, orderEleven));
         AtomicReference<Double> totalSalesWithoutDiscount = new AtomicReference<>(0.0);
         Double totalAmountOfLossViaDiscount = 0.0;
         Map<Long, Double> orderWiseTotalDiscountPercentage = new HashMap<>();
@@ -36,14 +35,14 @@ public class PolySuranceTestPartTwo {
 
         orderList.forEach(order -> {
             order.getItems().stream().mapToDouble(e -> (products.get(e.getSku()) * e.getQuantity()))
-                    .<UnaryOperator<Double>>mapToObj(v -> v1 -> new Double((double) (v1 + v)))
+                    .<UnaryOperator<Double>>mapToObj(v -> v1 -> (double) (v1 + v))
                     .forEach(totalSalesWithoutDiscount::updateAndGet);
         });
 
         for (NewOrder order : orderList) {
             double orderWiseDiscount = 0.0;
             for (Item item : order.getItems()) {
-                double totalDiscountPercentage = order.getDiscounts().stream().mapToDouble(e -> discounts.get(e)).sum();
+                double totalDiscountPercentage = order.getDiscounts().stream().mapToDouble(discounts::get).sum();
                 orderWiseDiscount += ((products.get(item.getSku()) * item.getQuantity()) * totalDiscountPercentage);
             }
             totalAmountOfLossViaDiscount += orderWiseDiscount;
@@ -61,9 +60,8 @@ public class PolySuranceTestPartTwo {
         result.put("totalSalesWithoutDiscount:", totalSalesWithoutDiscount);
         result.put("totalSalesAfterDiscount:", totalSalesAfterDiscount);
         result.put("totalAmountOfLossViaDiscount:", totalAmountOfLossViaDiscount);
-        result.put("orderWiseTotalDiscountPercentage:", orderWiseTotalDiscountPercentage);
         result.put("averageDiscountPerCustomerAsPercentage:", averageDiscountPerCustomerAsPercentage);
-
-        result.forEach((key, value) -> System.out.println(key + "  " + value));
+        System.out.println("Part Two Result:");
+        result.forEach((key, value) -> System.out.println(key + " " + value));
     }
 }
